@@ -27,6 +27,7 @@
   <LI> magick/image.c (SyncImage): Re-implement using pixel iterators.
         (SortColormapByIntensity): Re-implement using pixel iterators.
         (ClipPathImage): Re-implement using pixel iterators.
+        (CycleColormapImage): Re-implement using pixel iterators.
 
 </UL>
 <p>
